--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -32,7 +32,11 @@ clean-targets:         # directories to be removed by `dbt clean`
 # as tables. These settings can be overridden in the individual model files
 # using the `{{ config(...) }}` macro.
 models:
-  my_new_project:
+  dbt_keyrus:
     # Applies to all files under models/example/
-    example:
+    staging:
       materialized: view
+    models:
+      materialized: table
+    
+    
