--- a/models/staging/stripe/stg_stripe.yml
+++ b/models/staging/stripe/stg_stripe.yml
@@ -2,8 +2,8 @@ version: 2
 
 models:
   - name: payment
-    columns: 
-      - name: status
+    columns:
+      - name: PAY_STATUS
         tests:
           - accepted_values:
               values:
@@ -11,5 +11,3 @@ models:
                 - bank_transfer
                 - coupon
                 - gift_card
-
-      
