further stripe test

--- a/models/staging/stripe/src_stripe.yml
+++ b/models/staging/stripe/src_stripe.yml
@@ -1,6 +1,6 @@
 sources:
-  - name: stripe
+  - name: striping
     database: DBT
-    schema: STRIPE
+    schema: stripe
     tables:
       - name: payment
