--- a/models/staging/shop/src_shop.yml
+++ b/models/staging/shop/src_shop.yml
@@ -4,4 +4,9 @@ sources:
     schema: SHOP
     tables:
       - name: customers
+        columns:
+          - name: id
+            tests:
+              - unique
+              - not_null
       - name: orders
