--- a/models/staging/shop/stg_shop.yml
+++ b/models/staging/shop/stg_shop.yml
@@ -4,6 +4,7 @@ models:
   - name: customers
     columns: 
       - name: id
+        description: Unique customer id
         tests:
           - unique
           - not_null
@@ -11,10 +12,12 @@ models:
   - name: orders
     columns:
       - name: id
+        description: unique order primary key not_null.
         tests:
           - unique
           - not_null
       - name: status
+        description: "{{ doc('order_status') }}"
         tests:
           - accepted_values:
               values:
@@ -25,6 +28,7 @@ models:
                 - placed
 
       - name: USER_ID
+        description: order user id FK.
         tests:
             - relationships:
                 to: ref('customers')
