--- a/models/staging/stripe/stg_stripe.yml
+++ b/models/staging/stripe/stg_stripe.yml
@@ -2,8 +2,10 @@ version: 2
 
 models:
   - name: payment
+    description: stripe order payment.
     columns:
       - name: paymentmethod
+        description: "{{ doc('payment_method') }}"
         tests:
           - accepted_values:
               values:
