--- a/models/staging/snowplow/src_snowplow.yml
+++ b/models/staging/snowplow/src_snowplow.yml
@@ -1,10 +1,12 @@
-version: 2
+#version: 2
 
-sources:
-  - name: snowplow
-    database: raw
-    loaded_at_field: collector_tstamp
-    freshness:
-      error_after: {count: 1, period: hour}
-    tables:
-      - name: events
+#sources:
+#  - name: snowplow
+#    database: raw
+#    loaded_at_field: collector_tstamp
+#    freshness:
+#      error_after: {count: 1, period: hour}
+#    tables:
+#      - name: events
+
+      
