--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -38,5 +38,8 @@ models:
       staging:
           shop:
               +materialized: view
+          stripe:
+              +materialized: view
+              +schema: marketing
     
     
