--- a/models/staging/stripe/stg_payment.yml
+++ b/models/staging/stripe/stg_payment.yml
@@ -2,12 +2,12 @@ version: 2
 
 models:
   - name: payment
-    columns: 
+    columns:
       - name: pay_id
-        description: 'primary key of payment table'
+        description: "primary key of payment table"
         tests:
-            - unique
-            - not_null
+          - unique
+          - not_null
 
       - name: status
         tests:
@@ -15,13 +15,10 @@ models:
               values:
                 - "success"
                 - "fail"
-                
+
       - name: orderid
         tests:
           - relationships:
               field: id
               to: ref('orders')
 
-  
-
-        
