--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -34,7 +34,7 @@ clean-targets:         # directories to be removed by `dbt clean`
 models:
   dbt_keyrus:
       marts:
-        +materialized: table       
+        +materialized: view    
       staging:
           demo: 
               +materialized: view
